noinst_LTLIBRARIES = libctf-ir.la

libctf_ir_la_SOURCES = \
	attributes.c \
	clock-class.c \
	clock-value.c \
	event.c \
	event-class.c \
	event-header-field.c \
	field-wrapper.c \
	fields.c \
	field-types.c \
	field-path.c \
	packet.c \
	packet-context-field.c \
	packet-header-field.c \
	resolve-field-path.c \
	stream.c \
	stream-class.c \
	trace.c \
	utils.c

libctf_ir_la_LIBADD = $(UUID_LIBS)
