noinst_LTLIBRARIES = libctf-writer.la

libctf_writer_la_SOURCES = \
	attributes.c \
	clock.c \
	clock-class.c \
	event.c \
	event-class.c \
	field-path.c \
	fields.c \
	field-types.c \
	field-wrapper.c \
	functor.c \
	resolve.c \
	serialize.c \
	stream.c \
	stream-class.c \
	trace.c \
	utils.c \
	validation.c \
	visitor.c \
	writer.c

libctf_writer_la_LIBADD = $(UUID_LIBS)
