noinst_LTLIBRARIES = libtrace-ir.la

libtrace_ir_la_SOURCES = \
	attributes.c \
	clock-class.c \
	clock-value.c \
	event.c \
	event-class.c \
	event-header-field.c \
	field-wrapper.c \
	field.c \
	field-class.c \
	field-path.c \
	packet.c \
	packet-context-field.c \
	packet-header-field.c \
	resolve-field-path.c \
	stream.c \
	stream-class.c \
	trace.c \
	trace-class.c \
	utils.c

libtrace_ir_la_LIBADD = $(UUID_LIBS)
